toolbar overflow fixes by adding fabs, only done for articles

--- a/hosting/src/app/pages/articles/details/details.component.scss
+++ b/hosting/src/app/pages/articles/details/details.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
 }
 
 main {
@@ -10,6 +10,20 @@ main {
   margin: 8px;
 }
 
+.mat-toolbar {
+  overflow: hidden;
+}
+
 app-image-card {
   margin-bottom: 8px;
+}
+
+.fab-container {
+  position: sticky;
+  z-index: 1;
+  bottom: 16px;
+
+  a {
+    margin: 8px;
+  }
 }
